--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <div class="top">
-                <img src="./images/responsive_picture.jpg" alt="トップ写真500px固定" class="block-center profile-icon">
+                <div class="block-center profile-icon"></div>
                 <h1 class="site-title abel uppercase text-center"><span>With Cafe</span></h1>
                 <p>新しいことを始めたい… 、一人で始めるのはちょっと… 、中々自分に合う趣味が見つからない…、そんな貴方With Cafeで一緒に新しい趣味を見つけてみませんか？</p>
             </div>
